# hostfetch

./: .gitignore  README.md
.stfolder/: syncthing-folder-8de394.txt
hostfetch/: Cargo.toml
hostfetch/src/: border.rs  config.rs  host.rs  hostname.rs  kernel.rs  load_average.rs  locale.rs  main.rs  oschecker.rs  ram.rs  shell.rs  swap.rs  terminal.rs  uptime.rs  username.rs
