[package]
name = "hostfetch"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.20"
dirs = "6.0.0"
colored = "3.0.0"
toml_edit = "0.22"
android-properties = "0.2.2"
nix = "0.29.0"
sysinfo = "0.30.13"
crossterm = "0.26"
lazy_static = "1.4.0"
regex = "1.5.4"
owo-colors = "3.5.0"
